syntax="proto3";
package cart;
option go_package = "/cart";

import "error.proto";

message Data {
    string cartID = 1;
    string userID = 2;
    string status = 3;
    repeated DetailData products = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

message DetailData {
    string cartDetailID = 1;
    string productID = 2;
    string price = 3;
    string qty = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

message AddRequest {
    string cartID = 1;
    string userID = 2;
    repeated DetailData products = 3;
}

message AddResponse {
    Data data = 1;
    Error error = 2;
}

message FindRequest {
    string userID = 1;
}

message FindResponse {
    Data data = 1;
    Error error = 2;
}

message DeleteRequest {
    string cartDetailID = 1;
}

message DeleteResponse {
    Data data = 1;
    Error error = 2;
}